--- a/quran_feature/src/debug/AndroidManifest.xml
+++ b/quran_feature/src/debug/AndroidManifest.xml
@@ -2,10 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mabrouk.quran_listing_feature">
 
-    <application>
+    <application
+        >
         <activity
             android:name=".HiltTestActivity"
-            android:exported="true"  />
+            android:exported="false"  />
     </application>
 
 
