--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ android {
         viewBinding true
         dataBinding true
     }
+    namespace 'com.mabrouk.dalilmuslim'
 
 }
 
@@ -63,6 +64,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.firebase:firebase-config:21.0.2'
+    implementation 'com.google.firebase:firebase-analytics-ktx:21.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
