--- a/common_build.gradle
+++ b/common_build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-parcelize'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
+apply plugin: "org.sonarqube"
+apply plugin: 'jacoco'
 apply from: '../common_test_build.gradle'
 
 
@@ -12,8 +14,6 @@ android {
     defaultConfig {
         minSdkVersion 24
         targetSdkVersion 32
-        versionCode 1
-        versionName "1.0.$versionCode"
         archivesBaseName = "dalilMuslim-$versionName"
         multiDexEnabled true
 
@@ -87,7 +87,7 @@ android {
 dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
@@ -115,6 +115,10 @@ dependencies {
 
     //paging
     implementation("androidx.paging:paging-runtime:3.1.1")
+
+    //security
+    implementation "androidx.security:security-crypto:1.1.0-alpha03"
+
 
 
     //shimmer
@@ -173,6 +177,20 @@ dependencies {
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.8.1'
 
     implementation "com.airbnb.android:lottie:3.4.0"
+
+}
+
+sonarqube {
+    sonarqube {
+        properties {
+            property "sonar.projectName", "DHA"
+            property "sonar.projectKey", "HDA"
+            property "sonar.host.url", "http://localhost:9000"
+            property "sonar.projectVersion", "1.0"
+            property "sonar.language", "kotlin"
+            property "sonar.sources", "src/main/java/"
+        }
+    }
 
 }
 
