--- a/core/build.gradle
+++ b/core/build.gradle
@@ -23,9 +23,11 @@ android {
     lint {
         abortOnError false
     }
+    namespace 'com.mabrouk.core'
 
 }
 
 dependencies {
 implementation 'com.google.firebase:firebase-config:21.0.2'
+    implementation 'com.google.firebase:firebase-analytics-ktx:21.0.0'
 }
