--- a/history_feature/build.gradle
+++ b/history_feature/build.gradle
@@ -7,6 +7,8 @@ apply from: '../common_build.gradle'
 
 
 android {
+
+    namespace 'com.mabrouk.history_feature'
 }
 
 dependencies {
@@ -15,4 +17,5 @@ dependencies {
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:11.0.1'
     implementation 'com.github.HaarigerHarald:android-youtubeExtractor:master-SNAPSHOT'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.23'
+    implementation 'com.google.firebase:firebase-analytics-ktx:21.0.0'
 }
