--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.10'
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3"
         classpath "org.jacoco:org.jacoco.core:0.8.6"
+        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.google.firebase:firebase-appdistribution-gradle:3.0.1'
     }
 }
 
