handle lint error

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ android {
         }
     }
     lint {
-        abortOnError false
+        baseline = file("lint-baseline.xml")
     }
 
     buildFeatures {
