--- a/common_build.gradle
+++ b/common_build.gradle
@@ -45,6 +45,11 @@ android {
         }
 
     }
+
+    lint {
+        baseline = file("lint-baseline.xml")
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
@@ -55,9 +60,9 @@ android {
 
     }
 
-    lint {
-        abortOnError false
-    }
+//    lint {
+//        abortOnError false
+//    }
 
     buildFeatures {
         dataBinding true
