--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,8 @@ android {
         minSdk 24
         targetSdk 32
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
+        archivesBaseName = "dalilMuslim-$versionName"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.debug
