--- a/common_build.gradle
+++ b/common_build.gradle
@@ -14,6 +14,8 @@ android {
     defaultConfig {
         minSdkVersion 24
         targetSdkVersion 32
+        versionCode 1
+        versionName "1.0.0"
         archivesBaseName = "dalilMuslim-$versionName"
         multiDexEnabled true
 
