--- a/quran_feature/src/debug/AndroidManifest.xml
+++ b/quran_feature/src/debug/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <application
         >
         <activity
+            android:theme="@style/Theme.AppTheme"
             android:name=".HiltTestActivity"
             android:exported="false"  />
     </application>
