--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
     id 'com.google.firebase.appdistribution'
 }
 
@@ -81,6 +82,9 @@ dependencies {
     //work manger
     implementation "androidx.work:work-runtime-ktx:2.7.1"
     androidTestImplementation "androidx.work:work-testing:2.7.1"
+
+    implementation 'com.google.firebase:firebase-crashlytics:18.2.11'
+
 }
 
 kapt {
