--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        flipperVersion='0.149.0'
+        soLoaderVersion='0.10.3'
+    }
     dependencies {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.1'
         classpath 'com.google.gms:google-services:4.3.10'
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3"
         classpath "org.jacoco:org.jacoco.core:0.8.6"
-        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.android.tools.build:gradle:7.2.1'
         classpath 'com.google.firebase:firebase-appdistribution-gradle:3.0.2'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.0'
     }
 }
 
 plugins {
-    id 'com.android.application' version '7.2.0' apply false
-    id 'com.android.library' version '7.2.0' apply false
+    id 'com.android.application' version '7.2.1' apply false
+    id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.20' apply false
 }
 
