--- a/common_build.gradle
+++ b/common_build.gradle
@@ -33,13 +33,20 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
+            debuggable false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-
         }
+
         debug {
-            //testCoverageEnabled = true
-            minifyEnabled true
+            debuggable true
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
+        releaseDebug {
+            debuggable true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
 
@@ -138,15 +145,15 @@ dependencies {
     implementation 'com.karumi:dexter:6.2.3'
 
     //coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.2'
 
     //dagger hilt
-    implementation "com.google.dagger:hilt-android:2.38.1"
+    implementation "com.google.dagger:hilt-android:2.40.1"
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
     implementation 'javax.inject:javax.inject:1'
     implementation 'androidx.hilt:hilt-work:1.0.0'
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
-    kapt "com.google.dagger:hilt-android-compiler:2.38.1"
+    kapt "com.google.dagger:hilt-android-compiler:2.40.1"
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
     // lifecycle
@@ -184,6 +191,10 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-crashlytics:18.2.11'
 
+    //flipper
+    implementation "com.facebook.flipper:flipper:$flipperVersion"
+    implementation "com.facebook.soloader:soloader:$soLoaderVersion"
+    implementation "com.facebook.flipper:flipper-network-plugin:$flipperVersion"
 }
 
 sonarqube {
