--- a/common_build.gradle
+++ b/common_build.gradle
@@ -44,11 +44,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
 
-        releaseDebug {
-            debuggable true
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
+//        releaseDebug {
+//            debuggable true
+//            minifyEnabled false
+//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+//        }
 
     }
     compileOptions {
@@ -195,20 +195,6 @@ dependencies {
     implementation "com.facebook.flipper:flipper:$flipperVersion"
     implementation "com.facebook.soloader:soloader:$soLoaderVersion"
     implementation "com.facebook.flipper:flipper-network-plugin:$flipperVersion"
-}
-
-sonarqube {
-    sonarqube {
-        properties {
-            property "sonar.projectName", "DHA"
-            property "sonar.projectKey", "HDA"
-            property "sonar.host.url", "http://localhost:9000"
-            property "sonar.projectVersion", "1.0"
-            property "sonar.language", "kotlin"
-            property "sonar.sources", "src/main/java/"
-        }
-    }
-
 }
 
 kapt {
