update sgin build

--- a/gradle.properties
+++ b/gradle.properties
@@ -31,3 +31,7 @@ Base_Url_tafseer="http://api.quran-tafseer.com/"
 API_KEY="SqD712P3E82xnwOAEOkGd5JZH8s9wRR24TqNFzjk"
 Audio_Url = "http://www.everyayah.com/data/"
 Audio_Url2="http://verse.mp3quran.net/arabic/"
+DEBUG_STORE_FILE= ../keystore/dalil_muslim.jks
+DEBUG_STORE_PASSWORD=123456789
+DEBUG_KEY_ALIAS=dalil_muslim
+DEBUG_KEY_PASSWORD=123456789
