--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,13 +9,27 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        debug {
+            storeFile file(DEBUG_STORE_FILE)
+            storePassword DEBUG_STORE_PASSWORD
+            keyAlias DEBUG_KEY_ALIAS
+            keyPassword DEBUG_KEY_PASSWORD
+        }
+        release {
+            storeFile file(String.valueOf((System.getenv("ANDROID_KEYSTORE_PATH"))))
+            storePassword System.getenv("BITRISEIO_ANDROID_KEYSTORE_PASSWORD")
+            keyAlias System.getenv("BITRISEIO_ANDROID_KEYSTORE_ALIAS")
+            keyPassword System.getenv("BITRISEIO_ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD")
+        }
+    }
     compileSdk 32
 
     defaultConfig {
         applicationId "com.mabrouk.dalilmuslim"
         minSdk 24
         targetSdk 32
-        versionCode 2
+        versionCode 3
         versionName "1.0.$versionCode"
         archivesBaseName = "dalilMuslim-$versionName"
 
