--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,3 +24,16 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+    - uses: r0adkll/sign-android-release@v1
+      name: Sign app APK
+    # ID used to access action output
+      id: sign_app
+      with:
+       releaseDirectory: app/build/outputs/apk/release
+       signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+       alias: ${{ secrets.ALIAS }}
+       keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+       keyPassword: ${{ secrets.KEY_PASSWORD }}
+      env:
+      # override default build-tools version (29.0.3) -- optional
+         BUILD_TOOLS_VERSION: "30.0.2"
