--- a/settings.gradle
+++ b/settings.gradle
@@ -21,3 +21,4 @@ include ':hadith_feature'
 include ':azkar_feature'
 include ':history_feature'
 include ':radio_quran_feature'
+include ':benchmark'
