--- a/common_build.gradle
+++ b/common_build.gradle
@@ -52,8 +52,7 @@ android {
     }
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_11.toString()
-        useIR = true
-
+       // useIR = true
     }
 
     lint {
