--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
+        run: ./gradlew build
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
