--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,123 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        flipperVersion='0.164.0'
-        soLoaderVersion='0.10.3'
+        versions = [
+                flipperVersion     : '0.169.0',
+                soLoaderVersion    : '0.10.4',
+                glideVersion       : '4.14.2',
+                retrofitVersion    : '2.9.0',
+                coroutinesAdapter  : '0.9.2',
+                logger             : '4.10.0',
+                flexbox            : '3.0.0',
+                paging             : '3.1.1',
+                securityCrypto     : '1.1.0-alpha03',
+                shimmer            : '0.5.0',
+                workManager        : '2.7.1',
+                permission         : '6.2.3',
+                coroutines         : '1.6.4',
+                daggerHilt         : '2.43.2',
+                lifecycle          : '2.5.1',
+                lifecycleExtensions: '2.2.0',
+                room               : '2.4.3',
+                navigation         : '2.5.2',
+                exoplayer          : '2.18.1',
+                lottie             : '5.0.3',
+                firebaseCrashlytics: '18.2.12' ,
+                firebase: '21.1.1'
+        ]
+
+        libs = [
+                androidCore          : "androidx.core:core-ktx:1.7.0",
+                appcompat            : "androidx.appcompat:appcompat:1.4.1",
+                constraintlayout     : "androidx.constraintlayout:constraintlayout:2.1.4",
+                materialDesgin       : "com.google.android.material:material:1.6.1",
+                multidex             : "androidx.multidex:multidex:2.0.1",
+                recyclerview         : "androidx.recyclerview:recyclerview:1.2.1",
+                cardview             : "androidx.cardview:cardview:1.0.0",
+                datastore_preferences: "androidx.datastore:datastore-preferences:1.0.0",
+                coordinatorlayout    : "androidx.coordinatorlayout:coordinatorlayout:1.2.0",
+                legacy               : "androidx.legacy:legacy-support-v4:1.0.0",
+                //glide
+                glide                : "com.github.bumptech.glide:glide:${versions.glideVersion}",
+                glideKapt            : "com.github.bumptech.glide:compiler:${versions.glideVersion}",
+                //retrofit
+                retrofit             : [
+                        "com.squareup.retrofit2:retrofit:${versions.retrofitVersion}",
+                        "com.squareup.retrofit2:converter-gson:${versions.retrofitVersion}",
+                        "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:${versions.coroutinesAdapter}",
+                        "com.squareup.okhttp3:logging-interceptor:${versions.logger}",
+                        "com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0",
+                        "com.squareup.okhttp3:okhttp:4.9.3",
+
+                ],
+                flexbox              : "com.google.android.flexbox:flexbox:${versions.flexbox}",
+                //paging
+                paging               : "androidx.paging:paging-runtime:${versions.paging}",
+                //security
+                securityCrypto       : "androidx.security:security-crypto:${versions.securityCrypto}",
+                //shimmer
+                shimmer              : "com.facebook.shimmer:shimmer:${versions.shimmer}",
+                //work manger
+                workManager          : "androidx.work:work-runtime-ktx:${versions.workManager}",
+                workManagerTest      : "androidx.work:work-testing:${versions.workManager}",
+                //permission
+                permission           : "com.karumi:dexter:${versions.permission}",
+                //coroutines
+                coroutines           : "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}",
+                //dagger hilt
+                daggerHilt           : [
+                        "com.google.dagger:hilt-android:${versions.daggerHilt}",
+                        "javax.inject:javax.inject:1",
+                        "androidx.hilt:hilt-work:1.0.0"
+                ],
+                daggerHiltKapt       : [
+                        "com.google.dagger:hilt-android-compiler:${versions.daggerHilt}",
+                        "androidx.hilt:hilt-compiler:1.0.0"
+                ],
+                // lifecycle
+                lifecycle            : [
+                        "androidx.lifecycle:lifecycle-extensions:${versions.lifecycleExtensions}",
+                        "androidx.lifecycle:lifecycle-runtime-ktx:${versions.lifecycle}",
+                        "androidx.lifecycle:lifecycle-common-java8:${versions.lifecycle}",
+                        "androidx.lifecycle:lifecycle-reactivestreams-ktx:${versions.lifecycle}",
+                        "androidx.activity:activity-ktx:1.5.1"
+                ],
+                //room
+                room                 : [
+                        "androidx.room:room-runtime:${versions.room}",
+                        "androidx.room:room-ktx:${versions.room}"
+                ],
+                roomKapt             : "androidx.room:room-compiler:${versions.room}",
+                roomTest             : "androidx.room:room-testing:${versions.room}",
+                //navigation
+                navigation           : [
+                        "androidx.navigation:navigation-fragment-ktx:${versions.navigation}",
+                        "androidx.navigation:navigation-ui-ktx:${versions.navigation}",
+                        "androidx.navigation:navigation-dynamic-features-fragment:${versions.navigation}"
+                ],
+                navigationTest       : "androidx.navigation:navigation-testing:${versions.navigation}",
+                //exoplayer
+                exoplayer            : [
+                        "com.google.android.exoplayer:exoplayer:${versions.exoplayer}",
+                        "com.google.android.exoplayer:exoplayer-smoothstreaming:${versions.exoplayer}",
+                        "com.google.android.exoplayer:exoplayer-dash:${versions.exoplayer}"
+                ],
+                lottie               : "com.airbnb.android:lottie:5.0.3",
+                jsr250               : "javax.annotation:jsr250-api:1.0",
+                leakcanary           : "com.squareup.leakcanary:leakcanary-android:2.8.1",
+                firebaseCrashlytics  : "com.google.firebase:firebase-crashlytics:18.2.12",
+                firebase : [
+                        "com.google.firebase:firebase-config:${versions.firebase}",
+                        "com.google.firebase:firebase-analytics-ktx:${versions.firebase}"
+                ],
+                //flipper
+                flipper              : [
+                        "com.facebook.flipper:flipper:${versions.flipperVersion}",
+                        "com.facebook.soloader:soloader:${versions.soLoaderVersion}",
+                        "com.facebook.flipper:flipper-network-plugin:${versions.flipperVersion}"
+                ]
+        ]
+
     }
     dependencies {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.43.2'
@@ -13,6 +128,7 @@ buildscript {
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.1'
     }
 }
+
 
 plugins {
     id 'com.android.application' version '7.2.2' apply false
