--- a/benchmark/build.gradle
+++ b/benchmark/build.gradle
@@ -34,6 +34,7 @@ android {
     }
 
     targetProjectPath = ":app"
+    namespace 'com.mabrouk.benchmark'
     experimentalProperties["android.experimental.self-instrumenting"] = true
 }
 
