--- a/build.gradle
+++ b/build.gradle
@@ -2,28 +2,57 @@
 buildscript {
     ext {
         versions = [
-                flipperVersion     : '0.169.0',
-                soLoaderVersion    : '0.10.4',
-                glideVersion       : '4.14.2',
-                retrofitVersion    : '2.9.0',
-                coroutinesAdapter  : '0.9.2',
-                logger             : '4.10.0',
-                flexbox            : '3.0.0',
-                paging             : '3.1.1',
-                securityCrypto     : '1.1.0-alpha03',
-                shimmer            : '0.5.0',
-                workManager        : '2.7.1',
-                permission         : '6.2.3',
-                coroutines         : '1.6.4',
-                daggerHilt         : '2.43.2',
-                lifecycle          : '2.5.1',
-                lifecycleExtensions: '2.2.0',
-                room               : '2.4.3',
-                navigation         : '2.5.2',
-                exoplayer          : '2.18.1',
-                lottie             : '5.0.3',
-                firebaseCrashlytics: '18.2.12' ,
-                firebase: '21.1.1'
+                compose_version         : '1.1.1',
+                flipperVersion          : '0.169.0',
+                soLoaderVersion         : '0.10.4',
+                glideVersion            : '4.14.2',
+                retrofitVersion         : '2.9.0',
+                coroutinesAdapter       : '0.9.2',
+                logger                  : '4.10.0',
+                flexbox                 : '3.0.0',
+                paging                  : '3.1.1',
+                securityCrypto          : '1.1.0-alpha03',
+                shimmer                 : '0.5.0',
+                workManager             : '2.7.1',
+                permission              : '6.2.3',
+                coroutines              : '1.6.4',
+                daggerHilt              : '2.43.2',
+                lifecycle               : '2.5.1',
+                lifecycleExtensions     : '2.2.0',
+                room                    : '2.4.3',
+                navigation              : '2.5.2',
+                exoplayer               : '2.18.1',
+                lottie                  : '5.0.3',
+                firebaseCrashlytics     : '18.2.12',
+                firebase                : '21.1.1',
+                navigationComposeversion: '2.4.2',
+                coilCompose             : '2.1.0',
+                pagerCompose            : '0.19.0',
+                lottieCompose           : '4.0.0',
+                shimmerCompose          : '1.0.3'
+        ]
+
+        composeLibs = [
+                compose          : [
+                        "androidx.compose.ui:ui:${versions.compose_version}",
+                        "androidx.compose.material:material:${versions.compose_version}",
+                        "androidx.compose.ui:ui-tooling-preview:${versions.compose_version}",
+                        "androidx.activity:activity-compose:1.6.0"
+                ],
+                composeDebug     : "androidx.compose.ui:ui-tooling:${versions.compose_version}",
+                navigationCompose: [
+                        "androidx.navigation:navigation-compose:${versions.navigationComposeversion}",
+                        "androidx.navigation:navigation-fragment-ktx:${versions.navigation}"
+                ],
+                coilCompose      : [
+                        "io.coil-kt:coil-compose:${versions.coilCompose}",
+                        "io.coil-kt:coil-gif:${versions.coilCompose}"
+                ],
+                hiltCompose      : "androidx.hilt:hilt-navigation-compose:1.0.0",
+                pagerCompose     : "com.google.accompanist:accompanist-pager:${versions.pagerCompose}",
+                lottieCompose    : "com.airbnb.android:lottie-compose:${versions.lottieCompose}",
+                shimmerCompose   : "com.valentinilk.shimmer:compose-shimmer:${versions.shimmerCompose}"
+
         ]
 
         libs = [
@@ -106,7 +135,7 @@ buildscript {
                 jsr250               : "javax.annotation:jsr250-api:1.0",
                 leakcanary           : "com.squareup.leakcanary:leakcanary-android:2.8.1",
                 firebaseCrashlytics  : "com.google.firebase:firebase-crashlytics:18.2.12",
-                firebase : [
+                firebase             : [
                         "com.google.firebase:firebase-config:${versions.firebase}",
                         "com.google.firebase:firebase-analytics-ktx:${versions.firebase}"
                 ],
@@ -133,7 +162,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.3.0' apply false
     id 'com.android.library' version '7.3.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
     id 'com.android.test' version '7.3.0' apply false
 }
 
