--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+
 
     <application
         android:name=".MyApp"
@@ -28,10 +32,9 @@
 
         <activity
             android:name=".MainActivity"
+            android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
             android:exported="true"
             android:launchMode="singleTask"
-            android:configChanges=
-                "screenSize|smallestScreenSize|screenLayout|orientation"
             android:supportsPictureInPicture="true"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
@@ -41,10 +44,16 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="com.example.prayertime.presentaion.view.SalatActivity" />
+
+
+        <receiver android:name="com.example.prayertime.presentaion.workers.PrayerReceiver" />
+
         <provider
             android:name="androidx.startup.InitializationProvider"
             android:authorities="com.mabrouk.dalilmuslim.androidx-startup"
             tools:node="remove" />
+
     </application>
 
 </manifest>
