--- a/common_build.gradle
+++ b/common_build.gradle
@@ -10,7 +10,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        minSdkVersion 24
+        minSdkVersion 26
         targetSdkVersion 33
         multiDexEnabled true
 
@@ -157,6 +157,13 @@ dependencies {
 
     //flipper
     implementation libs.flipper
+
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.google.maps.android:android-maps-utils:2.3.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'net.danlew:android.joda:2.12.1.1'
+
+
 }
 
 
