--- a/prayerTime/build.gradle
+++ b/prayerTime/build.gradle
@@ -20,4 +20,5 @@ dependencies {
     api project(":core")
     implementation 'com.google.firebase:firebase-config:21.1.1'
     implementation 'com.google.firebase:firebase-analytics-ktx:21.1.0'
+    //implementation 'com.github.derysudrajat:compass-qibla:1.0.0'
 }
