--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ plugins {
     id 'com.google.firebase.crashlytics'
     id 'com.google.firebase.appdistribution'
     id "org.sonarqube" version "3.4.0.2513"
+    id 'com.guardsquare.appsweep' version "1.4.0"
 }
 
 android {
