resolve code smell

--- a/gradle.properties
+++ b/gradle.properties
@@ -28,3 +28,6 @@ DEBUG_STORE_FILE= ../keystores/dalil_muslim.jks
 DEBUG_STORE_PASSWORD=123456789
 DEBUG_KEY_ALIAS=dalil_muslim
 DEBUG_KEY_PASSWORD=123456789
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
