--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,6 +28,12 @@ jobs:
   upload-app-to-appsweep:
     runs-on: ubuntu-latest
     steps:
+      - name: set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: gradle
       - name: Check out repository code
         uses: actions/checkout@v2
 
